Fix navigation, add big z-index (#42)

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,6 +11,10 @@ body {
   background: url("../image/main-bg.png") top center no-repeat fixed;
 }
 
+#navigation {
+  z-index: 2137;
+}
+
 .Select-control, .Select.is-open .Select-control, .Select-menu-outer {
   border: 1px solid rgb(213, 201, 225);
 }
